--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,8 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A digital aide for teachers that generates modular, multi-paragraph student evaluations using a brief questionnaire in under 30 seconds. Created with React, Redux, MongoDB, Express and Node.js."
     />
+    <meta property="og:title" content="Teacher's Pet">
+    <meta property="og:image" content="./form.png">
+    <meta property="og:description" 
+      content="A digital aide for teachers that generates modular, multi-paragraph student evaluations using a brief questionnaire in under 30 seconds. Created with React, Redux, MongoDB, Express and Node.js."
+    >
+    <meta property="og:url" content="https://teacherspet.io/">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
