--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1MVQBWDZW8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1MVQBWDZW8');
+    </script>
+    <!-- end analytics -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
